[project]
name = "multi-ai-chat-hub"
version = "1.0.0"
description = "Multi-AI Chat Hub with 21 models from Perplexity, Groq, and OpenAI"
authors = [
    { name = "Multi-AI Chat Hub", email = "info@example.com" }
]
dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/your-username/multi-ai-chat-hub"
Repository = "https://github.com/your-username/multi-ai-chat-hub.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
] 